dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-deployment
  labels:
    app: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      containers:
      - name: devsecops
        image: khumo/devsecops:v2
        ports:
        - containerPort: 80
