dev/core.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    component: core
  annotations:
    argocd.argoproj.io/sync-wave: "0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops
  namespace: devsecops
  labels:
    component: core
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      containers:
        - name: devsecops
          image: khumo/devsecops:v1.0.11
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: devsecops
  namespace: devsecops
  labels:
    component: core
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: devsecops
  ports:
    - port: 80
      targetPort: 80
