dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-service
spec:
  selector:
    app: devsecops
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
