dev/devsecops.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      containers:
        - name: devsecops
          image: khumo/devsecops:v1.0.11
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: devsecops
  namespace: devsecops
spec:
  selector:
    app: devsecops
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops
  namespace: devsecops
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  rules:
    - host: devsecops.khumo.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsecops
                port:
                  number: 80
  tls:
    - hosts:
        - devsecops.khumo.cloud
      secretName: devsecops-certificate-secret
