dev/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops
  namespace: devsecops
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  tls:
    - hosts:
        - devsecops.khumo.cloud
      secretName: devsecops-certificate-secret
  rules:
    - host: devsecops.khumo.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsecops
                port:
                  number: 80
